--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-  	Hello, this is Keobs! Lets code!
+  	<h1>Hello, this is Keobs! Lets code!</h1>
+    <p>This is more copy here</p>
   </body>
 </html>
