--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+     <title>Keobs Avila</title>
   </head>
   <body>
-  	<h1>Hello, this is Keobs! Lets code!</h1>
-    <p>This is more copy here</p>
+    <h1>Hello, Code School!.</h1>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Web Design</li>
+      <li>The Elements of Web Design</li>
+    </ul>
   </body>
 </html>
